--- a/CSS/web.css
+++ b/CSS/web.css
@@ -189,11 +189,12 @@ ul{
 }
 @media(max-width:767px){
   .landing .text h1{
-    font-size: 23px;
-    font-weight: 500;
+    font-size: 26px;
+    font-weight: 800;
   }
   .landing .text p {
-    font-size: 13px;
+    font-size: 16px;
+    font-weight:bold;
   }
 }
 .landing .go {
